[package]
name = "rustserver"
version = "0.1.0"
authors = ["harbda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
futures = "0.3"
futures-util = "0.3"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }